@@ -3402,11 +3402,7 @@ static void addport(Port_T *list, Port_T port) {
                         p->parameters.http.hashtype = Hash_Unknown;
                 }
                 if (! p->parameters.http.method) {
-                        if ((p->url_request && p->url_request->regex) || p->parameters.http.checksum) {
-                                p->parameters.http.method = Http_Get;
-                        } else {
-                                p->parameters.http.method = Http_Head;
-                        }
+                        p->parameters.http.method = Http_Get;
                 } else if (p->parameters.http.method == Http_Head) {
                         // Sanity check: if content or checksum test is used, the method Http_Head is not allowed, as we need the content
                         if ((p->url_request && p->url_request->regex) || p->parameters.http.checksum) {
